[gd_scene load_steps=4 format=3 uid="uid://b3wl2q7chmvfl"]

[ext_resource type="Script" uid="uid://blvonkx2xk053" path="res://scenens/ui/Inventory/item_banner.gd" id="1_dh6xa"]
[ext_resource type="Texture2D" uid="uid://bxyvp7ctbvcu2" path="res://assets/ui/borders/06_Border_01-removebg-preview.png" id="2_dfgml"]
[ext_resource type="Texture2D" uid="uid://e625plnoyg56" path="res://assets/ui/borders/03_Border_01-removebg-preview.png" id="2_suukm"]

[node name="ItemBanner" type="MarginContainer"]
offset_right = 150.0
offset_bottom = 80.0
size_flags_horizontal = 3
script = ExtResource("1_dh6xa")

[node name="Highlight" type="NinePatchRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_suukm")
region_rect = Rect2(64, 128, 64, 65)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="ItemBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IconMargin" type="MarginContainer" parent="ItemBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureMargin" type="MarginContainer" parent="ItemBox/IconMargin"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="IconPanel" type="PanelContainer" parent="ItemBox/IconMargin/TextureMargin"]
layout_mode = 2

[node name="IconTexture" type="TextureRect" parent="ItemBox/IconMargin/TextureMargin"]
layout_mode = 2
expand_mode = 1

[node name="IconBorder" type="NinePatchRect" parent="ItemBox/IconMargin"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_dfgml")
region_rect = Rect2(192, 64, 64, 64)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="NameMargin" type="MarginContainer" parent="ItemBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Name" type="Label" parent="ItemBox/NameMargin"]
layout_mode = 2

[node name="AmountAddMargin" type="MarginContainer" parent="ItemBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="AmountAdd" type="Label" parent="ItemBox/AmountAddMargin"]
layout_mode = 2
text = "X"

[node name="AmountMargin" type="MarginContainer" parent="ItemBox"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Amount" type="Label" parent="ItemBox/AmountMargin"]
layout_mode = 2
